--- a/app/src/main/res/layout/fragment_contact_check.xml
+++ b/app/src/main/res/layout/fragment_contact_check.xml
@@ -1,29 +1,29 @@
 <android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.chattree.chattree.home.ContactCheckFragment">
-
-
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/list_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context="com.chattree.chattree.home.ContactCheckFragment">
 
-        >
-
-    </ListView>
+    <ProgressBar
+            android:id="@+id/list_contacts_progress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible" android:layout_gravity="center"/>
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/list_view"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/new_contact_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_anchorGravity="bottom|right"
-        app:layout_anchor="@id/list_view"
-        android:layout_margin="20dp"
-        android:src="@drawable/ic_person_add_white_24dp"
-        />
+            android:id="@+id/new_contact_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|right"
+            app:layout_anchor="@id/list_view"
+            android:layout_margin="20dp"
+            android:src="@drawable/ic_person_add_white_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
