--- a/app/src/main/res/layout/row_contact.xml
+++ b/app/src/main/res/layout/row_contact.xml
@@ -17,7 +17,7 @@
         <TextView
                 android:text="@string/bob_l_indien"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/nameTextView"
+                android:layout_height="wrap_content" android:id="@+id/contactPseudoTextView"
                 style="@style/Base.TextAppearance.AppCompat.Headline" android:textSize="18sp"/>
 
         <TextView
