--- a/app/src/main/res/layout/row_contact_checkbox.xml
+++ b/app/src/main/res/layout/row_contact_checkbox.xml
@@ -3,44 +3,35 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent" android:padding="8dp" android:gravity="center_vertical"
-    android:paddingTop="16dp" android:paddingBottom="16dp"
-
-    android:descendantFocusability="blocksDescendants">
+              android:paddingTop="16dp" android:paddingBottom="16dp"
+              android:descendantFocusability="blocksDescendants">
 
     <android.support.v7.widget.AppCompatCheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:id="@+id/checkboxcontact"
+            android:id="@+id/checkbox_contact_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"/>
 
-        />
-
-
-    <ImageView android:id="@+id/avatar"
+    <ImageView android:id="@+id/contactAvatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_account_circle_black_24dp"
-               android:contentDescription="string/contactPicture"
+               android:contentDescription="@string/contactPicture"
                android:scaleType="centerCrop" android:layout_marginEnd="8dp"/>
-
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
         <TextView
-                android:text="string/bob_l_indien"
+                android:id="@+id/contactPseudoTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-            android:id="@+id/nameTextView"
                 style="@style/Base.TextAppearance.AppCompat.Headline" android:textSize="18sp"/>
 
         <TextView
-                android:text="string/bla_bla_bla 1"
+                android:id="@+id/contactEmailTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/overviewTextView"/>
-
-
+                android:layout_height="wrap_content"/>
     </LinearLayout>
-
 
 </LinearLayout>
